# dgt

./: dgt.cabal  package.yaml  stack.yaml
app/: ChessLib.hs  DGTSerial.hs  Lichess.hs  Main.hs
src/: Chess200.hs  Confluence.hs  DGTSerial.hs  FEN.hs  Lichess.hs  LichessInterface.hs  LichessWebsockets.hs  Log.hs  SharedState.hs  TunnelState.hs
