name:                dgt
version:             0.1.0.0
-- synopsis:
description:         Driver for DGT chess boards
homepage:            https://github.com/theoremprover/dgt#readme
license:             BSD3
license-file:        LICENSE
author:              Robert
maintainer:          example@example.com
copyright:           2017 Robert
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable dgt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -fno-warn-tabs -threaded -rtsopts "-with-rtsopts=-N"
  other-extensions:    UnicodeSyntax,RecordWildCards,TypeSynonymInstances,FlexibleInstances,TupleSections,StandaloneDeriving
  other-modules:       Chess200,DGTSerial
  build-depends:       base >= 4.9 && <= 4.10,
                       serialport >= 0.4.7,
                       base-unicode-symbols,
                       monad-loops,
                       containers,
                       transformers,
                       bytestring,
                       mtl,
                       Stack,
                       array,
                       NumInstances >= 1.4,
                       parallel >= 3.2.1.1,
                       http-conduit >= 2.3.0,
                       aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theoremprover/dgt
